adding a class session using the singleton design pattern